[gd_scene load_steps=3 format=3 uid="uid://bgl784go08gjt"]

[ext_resource type="Script" path="res://ui/multiplayer/lobby/lobby_ui.gd" id="1_jwk81"]
[ext_resource type="PackedScene" uid="uid://bu0dec8p6tfym" path="res://ui/components/status_popup.tscn" id="2_gakky"]

[node name="LobbyUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jwk81")

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -166.0
offset_right = 166.0
offset_bottom = 76.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "Lobby"
horizontal_alignment = 1
vertical_alignment = 2

[node name="MessagesPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -347.0
offset_top = -228.0
offset_right = 348.0
offset_bottom = 202.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScrollContainer" type="ScrollContainer" parent="MessagesPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MessagesVBox" type="VBoxContainer" parent="MessagesPanel/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 2

[node name="ButtonsHBox" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -130.0
offset_top = -84.0
offset_right = 131.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="BackButton" type="Button" parent="ButtonsHBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
size_flags_vertical = 0
text = "Back
"

[node name="StatusPopup" parent="." instance=ExtResource("2_gakky")]
unique_name_in_owner = true
visible = false
layout_mode = 1
